--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,30 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
+cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 frozenlist==1.4.0
-gTTS==2.4.0
+google-api-core==2.12.0
+google-auth==2.23.3
+google-cloud-texttospeech==2.14.2
+googleapis-common-protos==1.60.0
+grpcio==1.59.0
+grpcio-status==1.59.0
 idna==3.4
 multidict==6.0.4
 openai==0.28.1
+proto-plus==1.22.3
+protobuf==4.24.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 PyAudio==0.2.13
+pygame==2.5.2
 python-dotenv==1.0.0
 requests==2.31.0
+rsa==4.9
 SpeechRecognition==3.10.0
 tqdm==4.66.1
 urllib3==2.0.6
