--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,21 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
+filelock==3.12.4
 frozenlist==1.4.0
+fsspec==2023.9.2
 google-api-core==2.12.0
 google-auth==2.23.3
 google-cloud-texttospeech==2.14.2
 googleapis-common-protos==1.60.0
 grpcio==1.59.0
 grpcio-status==1.59.0
+huggingface-hub==0.17.3
 idna==3.4
 multidict==6.0.4
+numpy==1.26.0
 openai==0.28.1
+packaging==23.2
 proto-plus==1.22.3
 protobuf==4.24.4
 pyasn1==0.5.0
@@ -24,9 +29,15 @@ pyasn1-modules==0.3.0
 PyAudio==0.2.13
 pygame==2.5.2
 python-dotenv==1.0.0
+PyYAML==6.0.1
+regex==2023.10.3
 requests==2.31.0
 rsa==4.9
+safetensors==0.4.0
 SpeechRecognition==3.10.0
+tokenizers==0.14.1
 tqdm==4.66.1
+transformers==4.34.0
+typing_extensions==4.8.0
 urllib3==2.0.6
 yarl==1.9.2
