--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
+bidict==0.22.1
+blinker==1.6.3
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 filelock==3.12.4
+Flask==3.0.0
+Flask-SocketIO==5.3.6
 frozenlist==1.4.0
 fsspec==2023.9.2
 google-api-core==2.12.0
@@ -16,9 +20,15 @@ google-cloud-texttospeech==2.14.2
 googleapis-common-protos==1.60.0
 grpcio==1.59.0
 grpcio-status==1.59.0
+h11==0.14.0
 huggingface-hub==0.17.3
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
 multidict==6.0.4
+networkx==3.1
 numpy==1.26.0
 openai==0.28.1
 packaging==23.2
@@ -29,15 +39,21 @@ pyasn1-modules==0.3.0
 PyAudio==0.2.13
 pygame==2.5.2
 python-dotenv==1.0.0
+python-engineio==4.7.1
+python-socketio==5.9.0
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 rsa==4.9
 safetensors==0.4.0
+simple-websocket==1.0.0
 SpeechRecognition==3.10.0
+sympy==1.12
 tokenizers==0.14.1
+torch==2.1.0
 tqdm==4.66.1
-transformers==4.34.0
 typing_extensions==4.8.0
 urllib3==2.0.6
+Werkzeug==3.0.0
+wsproto==1.2.0
 yarl==1.9.2
