--- a/requirements.txt
+++ b/requirements.txt
@@ -47,13 +47,14 @@ requests==2.31.0
 rsa==4.9
 safetensors==0.4.0
 simple-websocket==1.0.0
+six==1.16.0
+socketIO-client==0.7.2
 SpeechRecognition==3.10.0
 sympy==1.12
-tokenizers==0.14.1
-torch==2.1.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 urllib3==2.0.6
+websocket-client==1.6.4
 Werkzeug==3.0.0
 wsproto==1.2.0
 yarl==1.9.2
