--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,6 +53,7 @@ python-engineio==4.8.0
 python-socketio==5.10.0
 requests==2.31.0
 rsa==4.9
+serverless-wsgi==3.0.3
 simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.0
@@ -65,3 +66,4 @@ wsproto==1.2.0
 yarl==1.9.3
 zope.event==5.0
 zope.interface==6.1
+uwsgi==2.0.23
